    . [#937] Segfault in vpRobust when data to consider is a 2-dim vector
    . [#939] SonarQube static analysis is no more working
    . [#950] Cannot build tutorial-grabber-multiple-realsense.cpp with Visual Studio 2017
    . [#961] Build error on Ubuntu 21.10 with glibc 2.34
    . [#963] Unable to read a sequence of non consecutive images
    . [#972] Error running some examples: Application built with libpng-1.4.12
             but running with 1.6.37
    . [#973] Error running some examples: Wrong JPEG library version: library is 90,
             caller expects 80
----------------------------------------------
ViSP 3.4.0 (released February 26, 2021)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Pierre Chatelain, Souriya Trinh, Joudy Nader
    . Thanks also to Sergio Agostinho
  - New features and improvements
    . Compatibility with FreeBSD
    . Introduce transparency when displaying filled circle and rectangle with
      vpDisplayOpenCV
    . Complete refactoring of https://github.com/lagadic/visp_unity project
      a wrapper between ViSP and Unity
    . BLAS/LAPACK usage for linear algebra with either Intel MKL, OpenBLAS, Atlas,
      GSL, Netlib or Lapack built-in. Under Ubuntu, update-alternatives allows
      to switch during runtime between OpenBLAS, Atlas and Netlib
    . Remove vpMbEdgeMultiTracker, vpMbEdgeKltMultiTracker and vpMbKltMultiTracker
      deprecated classes. Use rather vpMbGenericTracker
    . visp.pc file used by pkg-config and visp-config script updated to
      be able to build a project that uses ViSP as 3rd party without CMake
    . New vpReflexTakktile2 class and examples to control Reflex Takktile 2 hand
      from Right Hand Robotics
    . New vpGaussianFilter class for Gaussian blur operation
    . vpRealsense2 class was extended to support Intel Realsense T265 device
    . Introduce Kannala Brandt projection model for fisheye cameras in vpCameraParameters