@@ -444,9 +444,9 @@ void run_test(const std::string &env_ipath, const std::string &opath,  vpImage<T
 // Test with floating point descriptor
 #if defined(VISP_HAVE_OPENCV_NONFREE) ||                                                                               \
   ((VISP_HAVE_OPENCV_VERSION >= 0x030000) && defined(VISP_HAVE_OPENCV_XFEATURES2D) || \
-   (VISP_HAVE_OPENCV_VERSION >= 0x030411 && CV_MAJOR_VERSION < 4) || (VISP_HAVE_OPENCV_VERSION >= 0x040400))
+   (VISP_HAVE_OPENCV_VERSION >= 0x030411 && CV_MAJOR_VERSION < 4) || ((VISP_HAVE_OPENCV_VERSION >= 0x040400) && (VISP_HAVE_OPENCV_VERSION != 0x040504)
   {
-    std::string keypointName = "SIFT";
+    std::string keypointName = "SIFT"; // SIFT is known unstable with OpenCV 4.5.4
     keyPoints.setDetector(keypointName);
     keyPoints.setExtractor(keypointName);
 
